--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"lint": "eslint --fix ."
 	},
 	"keywords": [
 		"pac",
