--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
 	},
 	"type": "module",
 	"scripts": {
-		"lint": "eslint --fix ."
+		"lint": "eslint --fix .",
+		"test": "jest"
 	},
 	"keywords": [
 		"pac",
 		"gfw"
 	],
 	"dependencies": {
+		"node-browser-history": "^2.4.4",
 		"node-fetch": "^2.6.1"
 	},
 	"devDependencies": {
 		"@kaciras/eslint-config-core": "^1.4.0",
-		"eslint": "^7.26.0"
+		"@kaciras/eslint-config-jest": "^1.4.0",
+		"eslint": "^7.26.0",
+		"jest": "^26.6.3"
 	}
 }
