--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"type": "module",
 	"scripts": {
 		"lint": "eslint --fix .",
-		"test": "jest"
+		"test": "jest",
+		"compile": "tsc"
 	},
 	"keywords": [
 		"pac",
@@ -29,7 +30,12 @@
 	"devDependencies": {
 		"@kaciras/eslint-config-core": "^1.4.0",
 		"@kaciras/eslint-config-jest": "^1.4.0",
+		"@kaciras/eslint-config-typescript": "^1.4.0",
+		"@types/ini": "^1.3.30",
+		"@types/jest": "^26.0.23",
+		"@types/node-fetch": "^2.5.10",
 		"eslint": "^7.26.0",
-		"jest": "^26.6.3"
+		"jest": "^26.6.3",
+		"typescript": "^4.2.4"
 	}
 }
