--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"koa": "^2.13.1",
 		"node-fetch": "^2.6.1",
 		"sqlite": "^4.0.22",
-		"sqlite3": "^5.0.2"
+		"sqlite3": "^5.0.2",
+		"yargs": "^17.0.1"
 	},
 	"devDependencies": {
 		"@kaciras/eslint-config-core": "^1.5.0",
