--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@kaciras/eslint-config-core": "^1.5.0",
 		"@kaciras/eslint-config-jest": "^1.5.0",
 		"eslint": "^7.26.0",
+		"execa": "^5.0.0",
 		"jest": "^26.6.3"
 	}
 }
