--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		],
 		"sourceMap": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"allowSyntheticDefaultImports": true
 	}
 }
