--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
 
       - uses: actions/checkout@v2
 
+      - run: npm i -g pnpm
+
       - run: pnpm install
 
       - run: pnpm run test
