fix missing compile command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
 
       - run: pnpm install
 
+      - run: pnpm compile
+
       - run: pnpm run test
         env:
           NODE_OPTIONS: --experimental-vm-modules
