--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"@kaciras/eslint-config-core": "^2.0.0",
 		"@kaciras/eslint-config-jest": "^2.0.0",
 		"@kaciras/eslint-config-typescript": "^2.0.0",
+		"@swc/core": "^1.2.102",
+		"@swc/jest": "^0.2.5",
 		"@types/ini": "^1.3.31",
 		"@types/jest": "^27.0.2",
 		"@types/koa": "^2.13.4",
@@ -53,7 +55,6 @@
 		"eslint": "^8.0.1",
 		"execa": "^5.1.1",
 		"jest": "^27.3.1",
-		"ts-jest": "^27.0.7",
 		"typescript": "^4.4.4"
 	}
 }
