--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"lib": [
-			"ESNext"
+			"ESNext",
+			"DOM", // `fetch` is not in @types/node
 		],
 		"removeComments": true,
 		"sourceMap": true,
