--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@types/jest": "^27.5.1",
 		"@types/koa": "^2.13.4",
 		"@types/koa__cors": "^3.3.0",
+		"@types/yargs": "^17.0.10",
 		"eslint": "^8.15.0",
 		"execa": "^6.1.0",
 		"jest": "^28.1.0",
