--- a/package.json
+++ b/package.json
@@ -41,23 +41,24 @@
 		"sqlite": "^4.1.1",
 		"sqlite3": "^5.0.8",
 		"undici": "^5.2.0",
-		"yargs": "^17.5.0"
+		"yargs": "^17.5.1"
 	},
 	"devDependencies": {
 		"@jest/globals": "^28.1.0",
-		"@kaciras/eslint-config-core": "^2.3.0",
-		"@kaciras/eslint-config-jest": "^2.3.0",
-		"@kaciras/eslint-config-typescript": "^2.3.0",
-		"@swc/core": "^1.2.183",
+		"@kaciras/eslint-config-core": "^2.4.0",
+		"@kaciras/eslint-config-jest": "^2.4.0",
+		"@kaciras/eslint-config-typescript": "^2.4.0",
+		"@swc/core": "^1.2.189",
 		"@swc/jest": "^0.2.21",
 		"@types/ini": "^1.3.31",
 		"@types/jest": "^27.5.1",
 		"@types/koa": "^2.13.4",
 		"@types/koa__cors": "^3.3.0",
 		"@types/yargs": "^17.0.10",
-		"eslint": "^8.15.0",
+		"eslint": "^8.16.0",
 		"execa": "^6.1.0",
 		"jest": "^28.1.0",
+		"mockttp": "^3.1.0",
 		"typescript": "^4.6.4"
 	}
 }
