--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 	},
 	"keywords": [
 		"pac",
+		"proxy",
 		"gfw",
-		"proxy"
+		"fetch",
+		"undici"
 	],
 	"engines": {
-		"node": ">=18"
+		"node": ">=16"
 	},
 	"type": "module",
 	"files": [
@@ -23,9 +25,8 @@
 		"list",
 		"template"
 	],
-	"exports": {
-		".": "./lib/index.js"
-	},
+	"types": "lib/index.ts",
+	"main": "lib/index.js",
 	"scripts": {
 		"lint": "eslint --fix .",
 		"test": "jest",
@@ -41,7 +42,7 @@
 		"socks": "^2.6.2",
 		"sqlite": "^4.1.1",
 		"sqlite3": "^5.0.8",
-		"undici": "^5.2.0",
+		"undici": "^5.3.0",
 		"yargs": "^17.5.1"
 	},
 	"devDependencies": {
@@ -49,7 +50,7 @@
 		"@kaciras/eslint-config-core": "^2.4.0",
 		"@kaciras/eslint-config-jest": "^2.4.0",
 		"@kaciras/eslint-config-typescript": "^2.4.0",
-		"@swc/core": "^1.2.189",
+		"@swc/core": "^1.2.194",
 		"@swc/jest": "^0.2.21",
 		"@types/ini": "^1.3.31",
 		"@types/jest": "^27.5.1",
@@ -60,6 +61,6 @@
 		"execa": "^6.1.0",
 		"jest": "^28.1.0",
 		"mockttp": "^3.1.0",
-		"typescript": "^4.6.4"
+		"typescript": "^4.7.2"
 	}
 }
