--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pac-maker",
 	"version": "1.2.0",
-	"description": "PAC generator & maintenance tool",
+	"description": "Proxy Auto-Configuration (PAC) file generator & loader, support proxy Node's `fetch` with PAC",
 	"author": "Kaciras <Kaciras@protonmail.com>",
 	"license": "MIT",
 	"repository": {
