--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"module": "ESNext",
 		"moduleResolution": "Node",
 		"lib": ["ESNext"],
-		"removeComments": true,
+		"declaration": true,
 		"sourceMap": true,
 		"strict": true,
 		"resolveJsonModule": true,
