use `fetch-socks`

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
 		"@kaciras/utilities": "^0.4.0",
 		"@koa/cors": "^4.0.0",
 		"chalk": "^5.1.0",
+		"fetch-socks": "^1.0.0",
 		"ini": "^3.0.1",
 		"koa": "^2.13.4",
-		"socks": "^2.7.1",
 		"sqlite": "^4.1.2",
 		"sqlite3": "^5.1.2",
 		"undici": "^5.13.0",
