--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint": "^8.31.0",
 		"jest": "^29.3.1",
 		"mockttp": "^3.6.2",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"wait-for-expect": "^3.0.2"
 	}
 }
