--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
 		"resolveJsonModule": true,
 		"useUnknownInCatchVariables": false,
 		"skipLibCheck": true,
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+
+		// For tests
+		"allowImportingTsExtensions": true,
 	}
 }
