--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@kaciras/utilities": "^0.11.0",
 		"@koa/cors": "^5.0.0",
 		"chalk": "^5.3.0",
+		"cli-progress": "^3.12.0",
 		"fetch-socks": "^1.2.0",
 		"ini": "^4.1.1",
 		"koa": "^2.15.0",
@@ -55,6 +56,7 @@
 		"@stryker-mutator/jest-runner": "^8.0.0",
 		"@swc/core": "^1.3.102",
 		"@swc/jest": "^0.2.29",
+		"@types/cli-progress": "^3.11.5",
 		"@types/ini": "^4.1.0",
 		"@types/koa": "^2.13.12",
 		"@types/koa__cors": "^5.0.0",
