--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
 		"ini": "^4.1.1",
 		"koa": "^2.15.0",
 		"sqlite": "^5.1.1",
-		"sqlite3": "5.1.7-rc.0",
-		"undici": "^6.2.1",
+		"sqlite3": "5.1.7",
+		"undici": "^6.3.0",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
@@ -58,12 +58,12 @@
 		"@swc/jest": "^0.2.29",
 		"@types/cli-progress": "^3.11.5",
 		"@types/ini": "^4.1.0",
-		"@types/koa": "^2.13.12",
+		"@types/koa": "^2.14.0",
 		"@types/koa__cors": "^5.0.0",
 		"@types/yargs": "^17.0.32",
 		"eslint": "^8.56.0",
 		"jest": "^29.7.0",
-		"mockttp": "^3.10.0",
+		"mockttp": "^3.10.1",
 		"typescript": "^5.3.3",
 		"wait-for-expect": "^3.0.2"
 	}
