--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@types/koa__cors": "^5.0.0",
 		"@types/yargs": "^17.0.32",
 		"eslint": "^8.56.0",
+		"expect": "^29.7.0",
 		"jest": "^29.7.0",
 		"mockttp": "^3.10.1",
 		"typescript": "^5.3.3",
