--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"koa": "^2.15.3",
 		"sqlite": "^5.1.1",
 		"sqlite3": "5.1.7",
-		"undici": "^6.13.0",
+		"undici": "^6.14.1",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
@@ -56,18 +56,19 @@
 		"@kaciras/eslint-config-typescript": "^3.0.1",
 		"@stryker-mutator/core": "^8.2.6",
 		"@stryker-mutator/jest-runner": "^8.2.6",
-		"@swc/core": "^1.4.15",
+		"@swc/core": "^1.5.0",
 		"@swc/jest": "^0.2.36",
 		"@types/cli-progress": "^3.11.5",
 		"@types/ini": "^4.1.0",
 		"@types/koa": "^2.15.0",
 		"@types/koa__cors": "^5.0.0",
 		"@types/yargs": "^17.0.32",
-		"eslint": "^9.0.0",
+		"eslint": "^9.1.1",
 		"expect": "^29.7.0",
 		"jest": "^29.7.0",
 		"mockttp": "^3.10.2",
 		"typescript": "^5.4.5",
 		"wait-for-expect": "^3.0.2"
-	}
+	},
+	"packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
 }
