--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["lib"],
+	"include": ["src"],
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "ESNext",
@@ -8,8 +8,9 @@
 		"strict": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
+		"outDir": "lib",
 		"sourceMap": true,
 		"declaration": true,
-		"useUnknownInCatchVariables": false,
+		"useUnknownInCatchVariables": false
 	}
 }
