--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
 	"dependencies": {
 		"@kaciras/deasync": "^1.0.4",
 		"@kaciras/utilities": "^0.13.0",
+		"better-sqlite3": "^10.0.0",
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
+		"esbench": "^0.2.1",
 		"fetch-socks": "^1.3.0",
 		"ini": "^4.1.2",
-		"sqlite": "^5.1.1",
-		"sqlite3": "5.1.7",
 		"undici": "^6.16.1",
 		"yargs": "^17.7.2"
 	},
@@ -56,6 +56,7 @@
 		"@stryker-mutator/jest-runner": "^8.2.6",
 		"@swc/core": "^1.5.7",
 		"@swc/jest": "^0.2.36",
+		"@types/better-sqlite3": "^7.6.10",
 		"@types/cli-progress": "^3.11.5",
 		"@types/ini": "^4.1.0",
 		"@types/yargs": "^17.0.32",
