--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"better-sqlite3": "^11.0.0",
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
-		"esbench": "^0.3.1",
+		"esbench": "^0.3.2",
 		"fetch-socks": "^1.3.0",
 		"ini": "^4.1.3",
 		"undici": "^6.18.2",
@@ -54,11 +54,11 @@
 		"@kaciras/eslint-config-typescript": "^3.0.3",
 		"@stryker-mutator/core": "^8.2.6",
 		"@stryker-mutator/jest-runner": "^8.2.6",
-		"@swc/core": "^1.5.25",
+		"@swc/core": "1.5.29-nightly-20240612.3",
 		"@swc/jest": "^0.2.36",
 		"@types/better-sqlite3": "^7.6.10",
 		"@types/cli-progress": "^3.11.5",
-		"@types/ini": "^4.1.0",
+		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.32",
 		"eslint": "^9.4.0",
 		"expect": "^29.7.0",
