--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
 		"better-sqlite3": "^11.0.0",
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
-		"esbench": "^0.3.2",
+		"esbench": "^0.3.3",
 		"fetch-socks": "^1.3.0",
 		"ini": "^4.1.3",
-		"undici": "^6.18.2",
+		"undici": "^6.19.2",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
@@ -54,13 +54,13 @@
 		"@kaciras/eslint-config-typescript": "^3.0.3",
 		"@stryker-mutator/core": "^8.2.6",
 		"@stryker-mutator/jest-runner": "^8.2.6",
-		"@swc/core": "1.5.29-nightly-20240612.3",
+		"@swc/core": "1.6.3",
 		"@swc/jest": "^0.2.36",
 		"@types/better-sqlite3": "^7.6.10",
 		"@types/cli-progress": "^3.11.5",
 		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.32",
-		"eslint": "^9.4.0",
+		"eslint": "^9.5.0",
 		"expect": "^29.7.0",
 		"jest": "^29.7.0",
 		"mockttp": "^3.12.0",
