--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"better-sqlite3": "^11.1.2",
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
-		"esbench": "^0.5.0",
+		"esbench": "^0.6.1",
 		"fetch-socks": "^1.3.0",
 		"ini": "^4.1.3",
 		"undici": "^6.19.2",
@@ -49,21 +49,21 @@
 	},
 	"devDependencies": {
 		"@jest/globals": "^29.7.0",
-		"@kaciras/eslint-config-core": "^3.0.3",
-		"@kaciras/eslint-config-jest": "^3.0.3",
-		"@kaciras/eslint-config-typescript": "^3.0.3",
+		"@kaciras/eslint-config-core": "^3.1.0",
+		"@kaciras/eslint-config-jest": "^3.1.0",
+		"@kaciras/eslint-config-typescript": "^3.1.0",
 		"@stryker-mutator/core": "^8.2.6",
 		"@stryker-mutator/jest-runner": "^8.2.6",
-		"@swc/core": "1.6.13",
+		"@swc/core": "1.7.0-nightly-20240717.3",
 		"@swc/jest": "^0.2.36",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/cli-progress": "^3.11.6",
 		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.32",
-		"eslint": "^9.6.0",
+		"eslint": "^9.7.0",
 		"expect": "^29.7.0",
 		"jest": "^29.7.0",
-		"mockttp": "^3.14.0",
+		"mockttp": "^3.15.0",
 		"typescript": "^5.5.3",
 		"wait-for-expect": "^3.0.2"
 	}
