--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"@jest/globals": "^29.7.0",
+		"@jest/globals": "^30.0.0-alpha.5",
 		"@kaciras/eslint-config-core": "^3.1.0",
 		"@kaciras/eslint-config-jest": "^3.1.0",
 		"@kaciras/eslint-config-typescript": "^3.1.0",
@@ -61,8 +61,8 @@
 		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.32",
 		"eslint": "^9.7.0",
-		"expect": "^29.7.0",
-		"jest": "^29.7.0",
+		"expect": "^30.0.0-alpha.5",
+		"jest": "^30.0.0-alpha.5",
 		"mockttp": "^3.15.0",
 		"typescript": "^5.5.3",
 		"wait-for-expect": "^3.0.2"
