--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"esbench": "^0.6.1",
 		"fetch-socks": "^1.3.0",
 		"ini": "^4.1.3",
-		"undici": "^6.19.2",
+		"undici": "^6.19.4",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
@@ -54,7 +54,7 @@
 		"@kaciras/eslint-config-typescript": "^3.1.0",
 		"@stryker-mutator/core": "^8.2.6",
 		"@stryker-mutator/jest-runner": "^8.2.6",
-		"@swc/core": "1.7.0-nightly-20240717.3",
+		"@swc/core": "1.7.1",
 		"@swc/jest": "^0.2.36",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/cli-progress": "^3.11.6",
@@ -64,7 +64,7 @@
 		"expect": "^30.0.0-alpha.5",
 		"jest": "^30.0.0-alpha.5",
 		"mockttp": "^3.15.0",
-		"typescript": "^5.5.3",
+		"typescript": "^5.5.4",
 		"wait-for-expect": "^3.0.2"
 	}
 }
