--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
 	"dependencies": {
 		"@kaciras/deasync": "^1.1.0",
 		"@kaciras/utilities": "^1.0.4",
-		"better-sqlite3": "^11.5.0",
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
 		"esbench": "^0.7.0",
@@ -46,6 +45,14 @@
 		"ini": "^5.0.0",
 		"undici": "^6.20.1",
 		"yargs": "^17.7.2"
+	},
+	"peerDependencies": {
+		"better-sqlite3": "^11.5.0"
+	},
+	"peerDependenciesMeta": {
+		"better-sqlite3": {
+			"optional": true
+		}
 	},
 	"devDependencies": {
 		"@jest/globals": "^30.0.0-alpha.6",
