--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,5 @@ jobs:
           NODE_OPTIONS: --experimental-vm-modules
 
       - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
