--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Kaciras/pac-maker.git"
+		"url": "https://github.com/Kaciras/pac-maker.git"
 	},
 	"keywords": [
 		"pac",
@@ -44,7 +44,7 @@
 		"fetch-socks": "^1.3.2",
 		"ini": "^5.0.0",
 		"undici": "^7.10.0",
-		"yargs": "^17.7.2"
+		"yargs": "^18.0.0"
 	},
 	"peerDependencies": {
 		"better-sqlite3": "^11.5.0"
@@ -55,15 +55,21 @@
 		}
 	},
 	"devDependencies": {
+		"@jest/globals": "^30.0.0-beta.4",
 		"@kaciras/eslint-config-core": "^3.3.0",
+		"@kaciras/eslint-config-jest": "^3.2.1",
 		"@kaciras/eslint-config-typescript": "^3.3.0",
 		"@stryker-mutator/core": "^9.0.1",
-		"@swc/core": "1.11.24",
+		"@stryker-mutator/jest-runner": "^9.0.1",
+		"@swc/core": "1.11.29",
+		"@swc/jest": "^0.2.37",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/cli-progress": "^3.11.6",
 		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.33",
-		"eslint": "^9.27.0",
+		"eslint": "^9.28.0",
+		"expect": "^30.0.0-beta.4",
+		"jest": "^30.0.0-beta.4",
 		"mockttp": "^3.17.1",
 		"typescript": "^5.8.3",
 		"wait-for-expect": "^3.0.2"
