--- a/package.json
+++ b/package.json
@@ -55,21 +55,21 @@
 		}
 	},
 	"devDependencies": {
-		"@jest/globals": "^30.0.0-beta.4",
+		"@jest/globals": "^30.0.0",
 		"@kaciras/eslint-config-core": "^3.3.0",
 		"@kaciras/eslint-config-jest": "^3.2.1",
 		"@kaciras/eslint-config-typescript": "^3.3.0",
 		"@stryker-mutator/core": "^9.0.1",
 		"@stryker-mutator/jest-runner": "^9.0.1",
-		"@swc/core": "1.11.31",
+		"@swc/core": "1.12.1",
 		"@swc/jest": "^0.2.37",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/cli-progress": "^3.11.6",
 		"@types/ini": "^4.1.1",
 		"@types/yargs": "^17.0.33",
-		"eslint": "^9.28.0",
-		"expect": "^30.0.0-beta.4",
-		"jest": "^30.0.0-beta.4",
+		"eslint": "^9.29.0",
+		"expect": "^30.0.0",
+		"jest": "^30.0.0",
 		"mockttp": "^3.17.1",
 		"typescript": "^5.8.3",
 		"wait-for-expect": "^3.0.2"
