--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
           version: latest
           run_install: true
 
+      - run: node test-color.js
+
       # When use "pnpm run test", don't add "--".
       - run: pnpm test -- --coverage
         env:
